tests/baselines/reference/jsdocDisallowedInTypescript.errors.txt
/a.ts(2,15): error TS8020: JSDoc types can only be used inside documentation comments.
/a.ts(4,21): error TS8020: JSDoc types can only be used inside documentation comments.
/a.ts(7,20): error TS8020: JSDoc types can only be used inside documentation comments.
/a.ts(10,18): error TS8020: JSDoc types can only be used inside documentation comments.
/a.ts(11,18): error TS2554: Expected 1 arguments, but got 2.
/a.ts(13,14): error TS8020: JSDoc types can only be used inside documentation comments.
/a.ts(14,11): error TS8020: JSDoc types can only be used inside documentation comments.
/a.ts(15,8): error TS8020: JSDoc types can only be used inside documentation comments.
/a.ts(16,17): error TS8020: JSDoc types can only be used inside documentation comments.
/b.ts(1,16): error TS17020: Adding a prefix '?' to the start of a type is not valid TypeScript syntax. Did you mean to write 'number | null | undefined'?
/b.ts(5,11): error TS17020: Adding a prefix '!' to the start of a type is not valid TypeScript syntax. Did you mean to write 'string'?
/b.ts(6,17): error TS17019: Adding a postfix '!' to the end of a type is not valid TypeScript syntax. Did you mean to write 'number'?
/b.ts(7,5): error TS2322: Type 'undefined' is not assignable to type 'number | null'.
/b.ts(7,17): error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'number | undefined'?
/b.ts(9,16): error TS17020: Adding a prefix '?' to the start of a type is not valid TypeScript syntax. Did you mean to write 'number | null | undefined'?
/b.ts(10,16): error TS17020: Adding a prefix '!' to the start of a type is not valid TypeScript syntax. Did you mean to write 'number'?


==== /a.ts (9 errors) ====
    // grammar error from checker
    var ara: Array.<number> = [1,2,3];
                  ~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    
    function f1(y: Array.<number>) {
                        ~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
        return y[0];
    }
    function hof(ctor: function(new: number, string)) {
                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
        return new ctor('hi');
    }
    function hof2(f: function(this: number, string): string) {
                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
        return f(12, 'hullo');
                     ~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 2.
    }
    var whatevs: * = 1001;
                 ~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    var ques: ? = 'what';
              ~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    var g: function(number, number): number = (n,m) => n + m;
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    var anys: Array<*>;
                    ~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    
==== /b.ts (7 errors) ====
    function f2(x: ?number) {
                   ~~~~~~~
!!! error TS17020: Adding a prefix '?' to the start of a type is not valid TypeScript syntax. Did you mean to write 'number | null | undefined'?
        return x;
    }
    
    var most: !string = 'definite';
              ~~~~~~~
!!! error TS17020: Adding a prefix '!' to the start of a type is not valid TypeScript syntax. Did you mean to write 'string'?
    var postfixdef: number! = 101;
                    ~~~~~~~
!!! error TS17019: Adding a postfix '!' to the end of a type is not valid TypeScript syntax. Did you mean to write 'number'?
    var postfixopt: number? = undefined;
        ~~~~~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'number | null'.
                    ~~~~~~~
!!! error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'number | undefined'?
    
    var nns: Array<?number>;
                   ~~~~~~~
!!! error TS17020: Adding a prefix '?' to the start of a type is not valid TypeScript syntax. Did you mean to write 'number | null | undefined'?
    var dns: Array<!number>;
                   ~~~~~~~
!!! error TS17020: Adding a prefix '!' to the start of a type is not valid TypeScript syntax. Did you mean to write 'number'?
    